--- a/ui/src/assets/scss/style.scss
+++ b/ui/src/assets/scss/style.scss
@@ -14,6 +14,17 @@
  * limitations under the License.
  */
 
+// don't stretch all the way
+@media only screen and (min-width: 960px) {
+  .euiPage {
+    max-width: 92% !important;
+  }
+}
+
+.euiBody--collapsibleNavIsDocked {
+  padding-left: 262px !important;
+}
+
 // expandable table's content
 .euiTableRowCell--isExpander {
   svg {
