--- a/ui/src/pages/version/components/forms/steps/Pipeline.scss
+++ b/ui/src/pages/version/components/forms/steps/Pipeline.scss
@@ -3,8 +3,17 @@
   overflow-x: hidden;
   scrollbar-width: none;
   height: 70vh;
+  padding: 5px 5px 62vh 10px;
 }
 
 .config::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
+}
+
+.preprocessing {
+  background-color: #eaf9ff;
+}
+
+.postprocessing {
+  background-color: #d2f1fe;
 }
