Fix position for operation tracing flow and address PR

--- a/ui/src/pages/version/components/forms/steps/Pipeline.scss
+++ b/ui/src/pages/version/components/forms/steps/Pipeline.scss
@@ -13,6 +13,10 @@
   background-color: #eaf9ff;
 }
 
+.simulation {
+  background-color: #eaf8ff;
+}
+
 .postprocessing {
   background-color: #d2f1fe;
 }
