Add transformer simulation features:
Enable users to test their standard transformer configuration without actual deployment.
The goal of this features is to shorten the development process.

- Add simulate API
- Add executor package as an "interface" to the transformer
- Revamp deployment UI to cater simulation components
- Revamp transformer tools

--- a/ui/src/pages/version/components/forms/steps/Pipeline.scss
+++ b/ui/src/pages/version/components/forms/steps/Pipeline.scss
@@ -1,13 +1,28 @@
-.config {
-  overflow-y: scroll;
-  overflow-x: hidden;
-  scrollbar-width: none;
-  height: 70vh;
-  padding: 5px 5px 62vh 10px;
-}
-
 .config::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
+}
+
+.config-sidebar {
+  overflow-y: auto;
+  position: sticky;
+  top: 75px !important;
+
+  .euiSideNavItemButton__label {
+    font-size: 0.75rem;
+    line-height: 2;
+  }
+}
+
+.toggle-panel-button {
+  overflow-y: auto;
+  position: sticky;
+  top: 90px !important;
+}
+
+.graph-sidebar {
+  overflow-y: auto;
+  position: sticky;
+  top: 75px !important;
 }
 
 .preprocessing {
@@ -16,4 +31,8 @@
 
 .postprocessing {
   background-color: #d2f1fe;
+}
+
+.simulation {
+  background-color: #eaf8ff;
 }
