fixed errors and packages versions

--- a/ui/src/assets/scss/index.scss
+++ b/ui/src/assets/scss/index.scss
@@ -14,6 +14,6 @@
  * limitations under the License.
  */
 
-@import "~@elastic/eui/src/theme_light.scss";
+@import "~@elastic/eui/dist/eui_theme_light.css";
 @import "~@gojek/mlp-ui/dist/index.css";
 @import "./style.scss";
