update background for version details and styling for description list

--- a/ui/src/components/section.scss
+++ b/ui/src/components/section.scss
@@ -25,7 +25,7 @@
 }
 
 .euiPanel--configSection {
-  .euiDescriptionList.euiDescriptionList--responsiveColumn {
+  .euiDescriptionList {
     > * {
       @include euiTextTruncate;
 
