Migrate mlp dependency reference to new org

--- a/ui/src/assets/scss/index.scss
+++ b/ui/src/assets/scss/index.scss
@@ -15,5 +15,5 @@
  */
 
 @import "~@elastic/eui/dist/eui_theme_light.css";
-@import "~@gojek/mlp-ui/dist/index.css";
+@import "~@caraml-dev/ui-lib/dist/index.css";
 @import "./style.scss";
